Changes #1462: Custom fields alignment issue fixed.

--- a/client/css/custom.less
+++ b/client/css/custom.less
@@ -2419,12 +2419,12 @@ footer, header, .dashboard-header {
 }
 .txt-aligns{
 	li{
-		label{	
+		small{	
 			overflow: hidden;
 			text-overflow: ellipsis;
 			white-space: nowrap;
 			display: inline-block;
-			width: 115px;
+			max-width: 115px;
 			line-height: 14px;
 			vertical-align: top;
 		}
@@ -2497,12 +2497,12 @@ header{
     padding: 5px 0 0 5px;
 }
 .js-custom_field-labels{
-	label{	
+	small{	
 			overflow: hidden;
 			text-overflow: ellipsis;
 			white-space: nowrap;
 			display: inline-block;
-			width: 115px;
+			max-width: 115px;
 			line-height: 14px;
 			vertical-align: top;
 		}
